5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4424/executions/1723_2499.log
== TEST (2019-05-09 11:45:53) 
-- CODE:
from math import*
k = int(input("escreva: "))
soma=0
i=0
fim=k-1


while(i<=fim):
	soma=soma+1/factorial(i)
	i=i+1
print(round(, 8))
-- ERROR:
File "XXXX", line 11
    print(round(, 8))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:46:02) 
-- CODE:
from math import*
k = int(input("escreva: "))
soma=0
i=0
fim=k-1


while(i<=fim):
	soma=soma+1/factorial(i)
	i=i+1
print(round(soma, 8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:46:10) 
-- CODE:
from math import*
k = int(input("escreva: "))
soma=0
i=0
fim=k-1


while(i<=fim):
	soma=soma+1/factorial(i)
	i=i+1
print(round(soma, 8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:46:13) 
-- CODE:
from math import*
k = int(input("escreva: "))
soma=0
i=0
fim=k-1


while(i<=fim):
	soma=soma+1/factorial(i)
	i=i+1
print(round(soma, 8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:46:17) 
-- CODE:
from math import*
k = int(input("escreva: "))
soma=0
i=0
fim=k-1


while(i<=fim):
	soma=soma+1/factorial(i)
	i=i+1
print(round(soma, 8))
-- EXECUTION TIME:
0.148443
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
